
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:stretchColumns="*">

    <!-- Preset Tests -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
         >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:text="@string/p1" />
            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button1"
                android:padding="10dp"
                android:text="@string/p2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_toRightOf="@+id/button2"
                android:padding="10dp"
                android:text="@string/p3" />
        </RelativeLayout>
    </TableRow>

    <!-- For custom tests -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_on" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_off" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeats" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/EditText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

            <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/create"
                android:layout_width="100dp"
                android:layout_height="125dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:text="@string/bot_left" />

<!--             <Button
                android:id="@+id/append"
                android:layout_width="100dp"
                android:layout_height="125dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/create"
                android:padding="10dp"
                android:text="@string/bot_center" /> -->

            <Button
                android:id="@+id/test"
                android:layout_width="100dp"
                android:layout_height="125dp"
                android:layout_toRightOf="@+id/create"
                android:padding="10dp"
                android:text="@string/bot_right" />
        </RelativeLayout>
  
</TableLayout>
